--- a/css/main.css
+++ b/css/main.css
@@ -101,15 +101,15 @@ html,h1,h2,h3,h4,h5,h6,a{
 
 
 /*Portfolio*/
-.portfolio{
+.projects{
 	margin: 4em 0;
     position: relative;	
 }
-.portfolio h1{
+.projects h1{
 	color:#F97300;
 	margin: 2em;	
 }
-.portfolio img{
+.projects img{
 	 height: 15rem;
 	 width: 100%;
 	 margin: 1em;
